--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.0",
     "firebase": "^7.17.1",
-    "react": "^16.13.1",
+    "react": "^16.14.0",
     "react-dom": "^16.13.1",
-    "react-google-login": "^5.1.24",
-    "react-redux": "^7.2.2",
+    "react-google-login": "^5.2.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "redux": "^4.1.0",
     "styled-components": "^5.1.1",
     "styled-loaders-react": "^1.1.0"
   },
